fixed final bugs!

--- a/3D/fox.html
+++ b/3D/fox.html
@@ -226,18 +226,10 @@
               </div>
               <h3>Project Overview</h3>
               <p>
-                This project features a charming 3D fox character brought to
-                life through detailed modeling and fluid animation in Blender.
-                The fox showcases natural movement patterns and expressive
-                gestures, demonstrating advanced character animation techniques.
+                This project is made in Blender and combines 3D modeling, animation,
+                rigging, and video editing. Enjoy the little fox animation!
               </p>
 
-              <p>
-                The animation incorporates synchronized sound effects and
-                realistic physics, creating an engaging and lifelike character
-                that captures the playful nature of foxes while maintaining
-                technical excellence in 3D modeling and animation.
-              </p>
 
               <h4 class="mt-4">Technical Details</h4>
               <div class="mb-3">
