--- a/DesignProject/pizza.html
+++ b/DesignProject/pizza.html
@@ -250,7 +250,8 @@
                 programmer for this project, our team of 5 worked together to
                 create this 100% original game.
               </p>
-                <p>We won the
+              <p>
+                We won the
                 <a
                   href="https://www.cmu.edu/pre-college/academic-programs/game-academy.html"
                   target="_blank"
@@ -305,36 +306,6 @@
                   style="border-radius: 8px"
                 >
                 </iframe>
-              </div>
-            </div>
-
-            <!-- Process Images with Popup Functionality -->
-            <div class="row g-4 mt-4">
-              <div class="col-md-6">
-                <a
-                  href="../images/Designproj/Pizza/pizzathumbnail.png"
-                  class="image-link"
-                  title="Pizzapocalypse Process 1"
-                >
-                  <img
-                    src="../images/Designproj/Pizza/pizzathumbnail.png"
-                    class="img-fluid"
-                    alt="Pizzapocalypse Process 1"
-                  />
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a
-                  href="../images/Designproj/Pizza/pizzathumbnail.png"
-                  class="image-link"
-                  title="Pizzapocalypse Process 2"
-                >
-                  <img
-                    src="../images/Designproj/Pizza/pizzathumbnail.png"
-                    class="img-fluid"
-                    alt="Pizzapocalypse Process 2"
-                  />
-                </a>
               </div>
             </div>
           </div>
