--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				  <p class="py-3">
 					I am Dianne Cao, an undergraduate student at MIT double majoring in
 					Artificial Intelligence and Art & Design. My interests combine
-					coding and creativity, I am exploring LLM creativity, 3D modeling, computer
+					coding and creativity! I am exploring LLM creativity, 3D modeling, computer
 					grafics, HCI research, game design, and more.
 				  </p>
 				  <a href="images/dingning_cao_resume__1_page_ (1).pdf" class="btn btn-dark px-3 py-2" target="_blank">Resume</a>
