--- a/DesignProject/hubsim.html
+++ b/DesignProject/hubsim.html
@@ -376,6 +376,29 @@
               </div>
             </div>
           </div>
+
+          <h3 class="mt-5">Team Management</h3>
+          <div class="process-images mt-4 mb-4">
+            <div class="row g-4">
+              <div class="col-md-6">
+                <a
+                  href="../images/Designproj/Hubsim/teammanage.png"
+                  class="image-link"
+                  title="Team Management"
+                >
+                  <img
+                    src="../images/Designproj/Hubsim/teammanage.png"
+                    class="img-fluid"
+                    alt="Team Management"
+                  />
+                </a>
+                <p class="mt-2" style="color: #888; font-size: 0.9rem">
+                  Managed team work using Trello and weekly stand up meetings to
+                  update work and track timelines. 
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
