--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@
 					Built browser-based sketch interface enabling collaborative LLM-human drawing
 				  </p>
 				<div class="research-links d-flex gap-3">
-				  <a href="#" class="btn btn-sm btn-outline-dark">Paper</a>
-				  <a href="#" class="btn btn-sm btn-outline-dark">Code</a>
+				  <a href="https://yael-vinker.github.io/sketch-agent/" class="btn btn-sm btn-outline-dark" target="_blank">Paper</a>
+				  <a href="https://github.com/yael-vinker/SketchAgent" class="btn btn-sm btn-outline-dark" target="_blank">Code</a>
 				  <a href="https://www.youtube.com/watch?v=F8WClut-eec" class="btn btn-sm btn-outline-dark" target="_blank">Interview</a>
 
 				</div>
