--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
 								</div>
 
 														<div class="activity-item mb-4 infinite-hover-trigger">
-								<h4 class="activity-title">Member of <span class="infinite-link">Infinite Magazine</span>, Layout of Nature Noir Issue 13</h4>
+								<h4 class="activity-title">Member of <span class="infinite-link">Infinite Magazine </span> Visual Design Director</h4>
 								<p class="activity-description">Contributing to MIT's student-run magazine with layout design and creative content for the Nature Noir issue.</p>
 								</div>
 						</div>
