--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 					  <button class="brush-btn rainbow" onclick="setBrush('rainbow')">🌈</button>
 					  <button class="brush-btn wiggle" onclick="setBrush('wiggle')">〰️</button>
 					  <button class="clear-btn-small" onclick="clearCanvas()">Clear</button>
+					  <button class="save-btn-small" onclick="saveCanvas()">Save</button>
 						</div>
 					<div class="canvas-wrapper-small" id="canvasWrapper">
 					  <div id="p5-canvas"></div>
@@ -1010,6 +1011,26 @@ function setBrush(brushType) {
 function clearCanvas() {
     background('#fbf8f3');
     hasDrawn = false;
+}
+
+function saveCanvas() {
+    // Create a temporary link element
+    const link = document.createElement('a');
+
+    // Get the canvas element and convert it to a data URL
+    const canvas = document.querySelector('#p5-canvas canvas');
+    if (canvas) {
+        const dataURL = canvas.toDataURL('image/png');
+
+        // Set up the download
+        link.download = 'dianne-canvas-' + new Date().toISOString().slice(0, 10) + '.png';
+        link.href = dataURL;
+
+        // Trigger the download
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+    }
 }
 
 function setup() {
